# PySerialPortLogger

./: .gitignore  LICENSE  README.md  pyproject.toml  serialportlogger.py
